# pyforest

./: .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README_for_devs.md  build_nbextension.sh  meta.yaml  package.json  requirements.txt  setup.cfg  setup.py  upload_to_conda.sh  upload_to_pypi.sh
.github/: ISSUE_TEMPLATE.md
dockerfiles/pyforest_sandbox/: Dockerfile  commands.sh  test.ipynb
examples/: demo.ipynb  demo.py  titanic.csv
src/pyforest/: __init__.py  __main__.py  _importable.py  _imports.py  _version.py  auto_import.py  package-lock.json  package.json  user_specific_imports.py  utils.py  webpack.config.js  widget.py
src/pyforest/static/: common.js  index.js  labextension.js  nbextension.js  nbextension_impl.js  utils.js
tests/: conftest.py  test_install.sh  test_pyforest.py
